--- a/.github/workflows/bootc-build-amd-desktop.yml
+++ b/.github/workflows/bootc-build-amd-desktop.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
     paths:
-      - 'bootc/bazzite-home-server/**'
+      - 'bazzite-home-server/**'
   workflow_dispatch:
 defaults:
   run:
@@ -109,8 +109,8 @@ jobs:
         uses: redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056 # v2
         with:
           containerfiles: |
-            ./bootc/bazzite-home-server/Containerfile
-          context: ./bootc/bazzite-home-server
+            ./bazzite-home-server/Containerfile
+          context: ./bazzite-home-server
           # Postfix image name with -custom to make it a little more descriptive
           # Syntax: https://docs.github.com/en/actions/learn-github-actions/expressions#format
           image: ${{ env.IMAGE_NAME }}
