--- a/.github/workflows/bootc-build-thinkpad.yml
+++ b/.github/workflows/bootc-build-thinkpad.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'bootc/thinkpad/**'
+      - 'thinkpad/**'
   workflow_dispatch:
 defaults:
   run:
@@ -107,8 +107,8 @@ jobs:
         uses: redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056 # v2
         with:
           containerfiles: |
-            ./bootc/thinkpad/Containerfile
-          context: ./bootc/thinkpad
+            ./thinkpad/Containerfile
+          context: ./thinkpad
           # Postfix image name with -custom to make it a little more descriptive
           # Syntax: https://docs.github.com/en/actions/learn-github-actions/expressions#format
           image: ${{ env.IMAGE_NAME }}
